# shifting_baseline

./: .gitignore  .pre-commit-config.yaml  ColMemo_MS  DOCS_README.md  README.md  makefile  mkdocs.yml  pyproject.toml  requirements-docs.txt
config/: config.yaml  variables.yaml
config/ds/: best.yaml  mac.yaml  minimum.yaml  pure.yaml  win_serve.yaml
config/how/: abm.yaml  caliberate.yaml  compare.yaml  correlation.yaml  process.yaml
config/hydra/hydra_logging/: custom.yaml
config/hydra/job_logging/: custom.yaml  log.yaml
config/model/: ACCESS-ESM1-5.yaml  MIROC-ES2L.yaml  MRI-ESM2-0.yaml  exp.yaml  test.yaml
config/vars/: variables.yaml
docs/: README.md  index.md  past1000.bib
docs/api/: abm.md  calibration.md  compare.md  constants.md  data.md  filters.md  process.md  utils.md  计算干旱指数.md
docs/development/: changelog.md  contributing.md  testing.md
docs/examples/: abm-simulation.md  advanced-analysis.md  basic-usage.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reports/: spei.ipynb
past1000/: __main__.py  abm.py  calibration.py  classification.py  compare.py  constants.py  data.py  filters.py  mc.py  process.py  types.py
past1000/api/: filters.py  io.py  log.py  mc.py  series.py
past1000/ci/: clip.py  corr.py  process.py  spei.py
past1000/core/: constants.py  exp.py  models.py
past1000/utils/: anova.py  calc.py  config.py  email.py  log.py  plot.py  types.py  units.py
past1000/viz/: plot.py
reports/: abm.ipynb  boxes.ipynb  history.ipynb  mismatch.ipynb  natural.ipynb  subplots.ipynb
shifting_baseline/: __main__.py  abm.py  calibration.py  compare.py  constants.py  data.py  filters.py  mc.py  process.py
shifting_baseline/utils/: anova.py  calc.py  config.py  log.py  plot.py  types.py
tests/: conftest.py  test_calc.py  test_calibration.py  test_config.py  test_filters.py  test_generate_from_2d_levels.py  test_historical_records.py  test_logging.py  test_mismatch_report.py  test_spei_calculation.py
tests/config/: test_config.yaml
tests/utils/: generate_spei_testdata.py
