[tool.poetry]
name = "shifting_baseline"
version = "0.1.0"
description = "Detecting Shifting Baseline Syndrome (SBS) behind data."
authors = ["SongshGeo <songshgeo@gmail.com>"]
readme = "README.md"
include = [
    'config/variables.yaml',
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
hydra-core = "~1.3"
xarray = ">=2023"
matplotlib = ">=3.9.2"
netcdf4 = ">=1.7"
rioxarray = ">=0.17.0"
geopandas = "*"
pint-xarray = ">=0.4"
nc-time-axis = ">=1.4"
matplotkit = ">=0.1.0"
# 使用 poetry run python -m pip install climate-indices 安装
# 不知道为什么，使用 poetry 安装的 climate-indices 版本无法运行
# 参考 https://climate-indices.readthedocs.io/en/latest/
# climate-indices = ">=2.0.1"
tqdm = "*"
cartopy = ">=0.24.1"
openpyxl = "*"
xclim = "^0.53.2"
cf-xarray = "*"
mksci-font = ">=0.1.3"
seaborn = "^0.13.2"
arviz = "^0.20.0"
pymc = "^5.20.1"
GeoDSKit = ">=0.2.0"
fitter = "^1.7.1"
abses = ">=0.7.5"
python-dotenv = "^1.1.1"
json-tricks = "^3.17.3"
cftime = "^1.6.4.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
allure-pytest = "^2.13.5"
pytest-clarity = "^1.0.1"
pytest-sugar = "^1.0.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.19"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.2"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-git-authors-plugin = "^0.10.0"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
mkdocs-bibtex = "^4.4.0"
mkdocs-macros-plugin = "^1.3.9"
mkdocs-jupyter = "^0.25.1"
mkdocs-callouts = "^1.16.0"
mkdocs-glightbox = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
